# keyvault

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/: project_layout.drawio
keyvault/: __init__.py  auth.py  get_secrets.py  upload_env_to_vault.py  utils.py
keyvault/tests/: __init__.py  test_keyvault.py
src/: __init__.py  db.py
