[metadata]
name = keyvault
version = 0.1.4
author = Melvin Folkers, Erfan Nariman
author_email = hello@zypp.io
description = A small package for handling project secrets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, azure, keyvault
url = https://github.com/zypp-io/keyvault
project_urls =
    Bug Tracker = https://github.com/zypp-io/keyvault/issues
    Source = https://github.com/zypp-io/keyvault
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = keyvault
python_requires = >=3.6
install_requires =
    azure-identity==1.6.0
    azure-keyvault-secrets==4.3.0
    tqdm==4.62.1

[flake8]
statistics = True
count = True
max-complexity=10
max-line-length=120
per-file-ignores=__init__.py: F401
